--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,14 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  test-db:
+    image: postgres:latest 
+    restart: always
+    environment:
+      POSTGRES_USER: nestuser
+      POSTGRES_PASSWORD: nestpass
+      POSTGRES_DB: nestdb
+    ports:
+      - "5435:5432"
 volumes:
   pgdata:
