--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.test
 .env.development.local
 .env.test.local
 .env.production.local
@@ -48,6 +49,7 @@ lerna-debug.log*
 .temp
 .tmp
 
+
 # Runtime data
 pids
 *.pid
@@ -56,3 +58,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+/generated/prisma
+text.md
